add product to its own component, add some css

--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,4 +1,8 @@
-
+.items-container {
+  display: inline-flex;
+  min-width: 350px;
+  min-height: 180px;
+}
 
 /*
 Copyright Google LLC. All Rights Reserved.
